--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "YUNA BOT",
     "PREFIX": "/",
     "ADMINBOT": [
         "100084485225595",
